# teensy-audio-x86-stubs

./: CMakeLists.txt  README.md
.github/workflows/: audio-x64.yml  soundio.yml
cmake/: teensy_audio_x86_stubs.cmake.in  teensy_audio_x86_stubs_soundio.cmake.in
extras/soundio/: CMakeLists.txt
extras/soundio/examples/analyze/: CMakeLists.txt  analyze.cpp
extras/soundio/examples/basic/: CMakeLists.txt  basic.cpp
extras/soundio/examples/input/: CMakeLists.txt  input.cpp
extras/soundio/examples/mixer/: AudioSampleKick.h  CMakeLists.txt  mixer.cpp
extras/soundio/examples/playmemory/: AudioSampleKick.cpp  CMakeLists.txt  playmemory.cpp
extras/soundio/examples/queue/: CMakeLists.txt  queue.cpp
extras/soundio/examples/recordsine/: CMakeLists.txt  recordsine.cpp
extras/soundio/shared/: AudioSampleCashregister.cpp  AudioSampleGong.cpp  AudioSampleHihat.cpp  AudioSampleKick.cpp  AudioSampleSnare.cpp  AudioSampleTomtom.cpp
extras/soundio/src/: CMakeLists.cmake.in  CMakeLists.txt  input_soundio.cpp  input_soundio.h  output_soundio.cpp  output_soundio.h
extras/soundio/test/: CMakeLists.txt  test.cpp
src/: Audio.h  CMakeLists.cmake.in  CMakeLists.txt  Quantizer.cpp  Quantizer.h  README.md  Resampler.cpp  Resampler.h  analyze_fft1024.cpp  analyze_fft1024.h  analyze_fft256.cpp  analyze_fft256.h  analyze_print.cpp  analyze_rms.cpp  analyze_rms.h  analyze_tonedetect.cpp  analyze_tonedetect.h  biquad.h  control_cs42448.cpp  control_cs42448.h  control_sgtl5000.cpp  control_sgtl5000.h  effect_delay.h  effect_delay_ext.cpp  effect_envelope.cpp  effect_envelope.h  effect_fade.cpp  effect_flange.cpp  effect_flange.h  effect_freeverb.cpp  effect_midside.h  effect_multiply.h  filter_biquad.cpp  filter_biquad.h  filter_fir.cpp  filter_fir.h  filter_ladder.cpp  filter_ladder.h  filter_variable.cpp  filter_variable.h  (+56 more)
src/utility/: dspinst.h
