cmake_minimum_required(VERSION 3.10)
project(teensy_audio_x86_stubs)
add_subdirectory(src)
add_subdirectory(extras/soundio/src)
add_subdirectory(extras/soundio/examples/analyze)
add_subdirectory(extras/soundio/examples/basic)
add_subdirectory(extras/soundio/examples/input)
add_subdirectory(extras/soundio/examples/playmemory)
add_subdirectory(extras/soundio/examples/queue)
add_subdirectory(extras/soundio/examples/recordsine)
